--- a/Python first steps, day 2 -- 2022-12Dec-05.ipynb
+++ b/Python first steps, day 2 -- 2022-12Dec-05.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ece5d1d2",
+   "id": "7e66a176",
    "metadata": {},
    "source": [
     "# Agenda: Week 3 (Dictionaries and files)\n",
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c39921f8",
+   "id": "138d5119",
    "metadata": {},
    "source": [
     "# Data structures so far\n",
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3acb2f4d",
+   "id": "b96b27fc",
    "metadata": {},
    "source": [
     "# Getting help in Jupyter\n",
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "abe39276",
+   "id": "7e51e0a7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "6c8379b8",
+   "id": "6550238d",
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +240,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "de634890",
+   "id": "992b229f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dc03139f",
+   "id": "1bd1b934",
    "metadata": {},
    "source": [
     "# Dictionaries (aka \"dicts\")\n",
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d21a66c5",
+   "id": "743c8c62",
    "metadata": {},
    "source": [
     "A dict is also known by many other names in other languages:\n",
@@ -303,7 +303,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "8e37e69a",
+   "id": "ca0f1a3e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,7 +320,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "2aa0fea1",
+   "id": "db18bfc9",
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +341,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "0570910a",
+   "id": "7cee1e2c",
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +364,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "b21dcb72",
+   "id": "85dd2dd4",
    "metadata": {},
    "outputs": [
     {
@@ -386,7 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "6fcce5ce",
+   "id": "02c5f56b",
    "metadata": {},
    "outputs": [
     {
@@ -407,7 +407,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "cca0be8d",
+   "id": "d579daac",
    "metadata": {},
    "outputs": [
     {
@@ -430,7 +430,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "3bf023a6",
+   "id": "2ed2c320",
    "metadata": {},
    "outputs": [
     {
@@ -451,7 +451,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "7620f64a",
+   "id": "aeaa2a05",
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +472,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "53bb1036",
+   "id": "f630cb3a",
    "metadata": {},
    "outputs": [
     {
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d7c455e8",
+   "id": "32084ca0",
    "metadata": {},
    "source": [
     "# First paradigm for dict use: A read-only database\n",
@@ -506,7 +506,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "f434c4da",
+   "id": "2128ffd7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -516,7 +516,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "de412320",
+   "id": "124693b6",
    "metadata": {},
    "outputs": [
     {
@@ -537,7 +537,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "84a039d8",
+   "id": "0b1cc0b3",
    "metadata": {},
    "outputs": [
     {
@@ -558,7 +558,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ba10ea54",
+   "id": "652f09ab",
    "metadata": {},
    "source": [
     "# Exercise: Restuarant\n",
@@ -583,7 +583,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "2b0b7029",
+   "id": "67404126",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -596,7 +596,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "0b1b60ff",
+   "id": "1bf7f549",
    "metadata": {},
    "outputs": [
     {
@@ -617,7 +617,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "f6b65bb7",
+   "id": "62a80e67",
    "metadata": {},
    "outputs": [
     {
@@ -638,7 +638,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "08ed16f1",
+   "id": "8cad3692",
    "metadata": {},
    "outputs": [
     {
@@ -660,7 +660,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "cae1362c",
+   "id": "9e14b98f",
    "metadata": {},
    "outputs": [
     {
@@ -710,7 +710,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "752358fe",
+   "id": "20b64a63",
    "metadata": {},
    "outputs": [
     {
@@ -732,7 +732,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "4c2cb147",
+   "id": "5db26093",
    "metadata": {},
    "outputs": [
     {
@@ -752,14 +752,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0bab5ff9",
+   "id": "cceb5e63",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "a7f9c21f",
+   "id": "d9b708fb",
    "metadata": {},
    "source": [
     "\n",
@@ -784,7 +784,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "835855d5",
+   "id": "1243355c",
    "metadata": {},
    "outputs": [
     {
@@ -812,7 +812,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "dddcaab5",
+   "id": "21332dc3",
    "metadata": {},
    "outputs": [
     {
@@ -838,7 +838,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "9cd15a16",
+   "id": "8b84b48b",
    "metadata": {},
    "outputs": [
     {
@@ -862,7 +862,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "497680df",
+   "id": "d6cb2630",
    "metadata": {},
    "outputs": [
     {
@@ -882,7 +882,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e19956ab",
+   "id": "d2ed3ff4",
    "metadata": {},
    "source": [
     "# Dicts are always key -> value\n",
@@ -897,7 +897,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "34d3c360",
+   "id": "67c4491c",
    "metadata": {},
    "outputs": [
     {
@@ -917,7 +917,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "170d507c",
+   "id": "5fae6142",
    "metadata": {},
    "source": [
     "# Next up\n",
@@ -928,7 +928,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6b49d035",
+   "id": "6bc48d82",
    "metadata": {},
    "source": [
     "# Dicts for accumulation (paradigm 2)\n",
@@ -941,7 +941,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "aa5513d4",
+   "id": "e03ce03b",
    "metadata": {},
    "outputs": [
     {
@@ -971,7 +971,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1e20dd28",
+   "id": "61126cb5",
    "metadata": {},
    "source": [
     "# Exercise: Vowels, digits, and others (dict edition)\n",
@@ -988,7 +988,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "4d0ee533",
+   "id": "e400df4a",
    "metadata": {},
    "outputs": [
     {
@@ -1022,7 +1022,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "21e3246c",
+   "id": "f0b2062d",
    "metadata": {},
    "outputs": [
     {
@@ -1043,7 +1043,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ee4ddc9",
+   "id": "c6e8b8d9",
    "metadata": {},
    "source": [
     "# Accumulating the unknown (paradigm 3)\n",
@@ -1058,7 +1058,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "0db73c83",
+   "id": "83489d12",
    "metadata": {},
    "outputs": [
     {
@@ -1095,7 +1095,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "53c2fcbb",
+   "id": "6b455c49",
    "metadata": {},
    "outputs": [
     {
@@ -1123,7 +1123,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "6f243f95",
+   "id": "c188d445",
    "metadata": {},
    "outputs": [
     {
@@ -1159,7 +1159,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b93595e6",
+   "id": "ddb55285",
    "metadata": {},
    "source": [
     "# Rainfall \n",
@@ -1195,7 +1195,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "b2aa9850",
+   "id": "ba20bbc4",
    "metadata": {},
    "outputs": [
     {
@@ -1238,7 +1238,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e8defa9e",
+   "id": "19ecff35",
    "metadata": {},
    "source": [
     "# Next up\n",
@@ -1250,7 +1250,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a4846fc2",
+   "id": "49d29f51",
    "metadata": {},
    "source": [
     "# Looping over dicts\n",
@@ -1267,7 +1267,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "07e14624",
+   "id": "e170989c",
    "metadata": {},
    "outputs": [
     {
@@ -1290,7 +1290,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "7b0834fe",
+   "id": "4a9c6d6c",
    "metadata": {},
    "outputs": [
     {
@@ -1313,7 +1313,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "4b4b6faa",
+   "id": "d92d6d21",
    "metadata": {},
    "outputs": [
     {
@@ -1336,7 +1336,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "260ae3c1",
+   "id": "1b784a45",
    "metadata": {},
    "outputs": [
     {
@@ -1360,7 +1360,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "d0f1b9b1",
+   "id": "da52d764",
    "metadata": {},
    "outputs": [
     {
@@ -1383,7 +1383,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "8b285315",
+   "id": "fd446ec3",
    "metadata": {},
    "outputs": [
     {
@@ -1406,7 +1406,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "0b1872e4",
+   "id": "d0496238",
    "metadata": {},
    "outputs": [
     {
@@ -1427,7 +1427,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "5407057f",
+   "id": "007cdbbe",
    "metadata": {},
    "outputs": [
     {
@@ -1450,7 +1450,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "de4b3a0f",
+   "id": "4163cd62",
    "metadata": {},
    "outputs": [
     {
@@ -1473,7 +1473,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "e8a4c513",
+   "id": "c09145f5",
    "metadata": {},
    "outputs": [
     {
@@ -1495,7 +1495,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "94ae7e54",
+   "id": "da1e3a87",
    "metadata": {},
    "outputs": [
     {
@@ -1516,7 +1516,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cd58574e",
+   "id": "f6fbcc8a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1528,7 +1528,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cc934de8",
+   "id": "c11f731d",
    "metadata": {},
    "source": [
     "# Exercise: Age statistics\n",
@@ -1540,7 +1540,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "caf7cdea",
+   "id": "432cde2c",
    "metadata": {},
    "outputs": [
     {
@@ -1571,7 +1571,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "1edf483c",
+   "id": "fc1af0ed",
    "metadata": {},
    "outputs": [
     {
@@ -1598,7 +1598,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "14e0c3e8",
+   "id": "02772197",
    "metadata": {},
    "outputs": [
     {
@@ -1620,7 +1620,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a36b6117",
+   "id": "fad01063",
    "metadata": {},
    "source": [
     "# How do dictionaries work?\n",
@@ -1642,7 +1642,9 @@
     "\n",
     "So what does this way of storing and retrieving have to do with the rules I wrote earlier in this cell?\n",
     "\n",
-    "1. "
+    "1. Keys must be unique, because otherwise they would sit on top of each other in memory, thanks to the hash function.\n",
+    "2. Keys must be immutable, because if they could change, then the hash function would calculate something different than what they actually are, and the data would get lost.\n",
+    "3. Searching is very fast, because of the office metaphor -- you just jump to the appropriate office/location, and retrieve the data."
    ]
   }
  ],
