--- a/Python first steps, day 2 -- 2022-12Dec-05.ipynb
+++ b/Python first steps, day 2 -- 2022-12Dec-05.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "fd1744ba",
+   "id": "ec94fc3b",
    "metadata": {},
    "source": [
     "# Agenda: Week 3 (Dictionaries and files)\n",
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4967711b",
+   "id": "d37cbc59",
    "metadata": {},
    "source": [
     "# Data structures so far\n",
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2293538a",
+   "id": "1c9c57b6",
    "metadata": {},
    "source": [
     "# Getting help in Jupyter\n",
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "37b58bfb",
+   "id": "2bfc270d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "3889b854",
+   "id": "bc78875a",
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +240,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "1dec8c61",
+   "id": "8a6763cd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4ba573b1",
+   "id": "db6153a6",
    "metadata": {},
    "source": [
     "# Dictionaries (aka \"dicts\")\n",
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8cd9230b",
+   "id": "a2a4d3eb",
    "metadata": {},
    "source": [
     "A dict is also known by many other names in other languages:\n",
@@ -303,7 +303,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "a0dd5cd8",
+   "id": "78559fa7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,7 +320,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "07522a93",
+   "id": "0843913d",
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +341,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "db9fd24b",
+   "id": "61b4eed9",
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +364,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "a9407ebf",
+   "id": "db00cadb",
    "metadata": {},
    "outputs": [
     {
@@ -386,7 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "1987189d",
+   "id": "e5dc5b67",
    "metadata": {},
    "outputs": [
     {
@@ -407,7 +407,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "894d3961",
+   "id": "22c568e2",
    "metadata": {},
    "outputs": [
     {
@@ -430,7 +430,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "3b530f24",
+   "id": "d7249f34",
    "metadata": {},
    "outputs": [
     {
@@ -451,7 +451,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "757f5ea2",
+   "id": "645cf012",
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +472,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "0bdc97cc",
+   "id": "72527a44",
    "metadata": {},
    "outputs": [
     {
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5dca3ff9",
+   "id": "f3ae1412",
    "metadata": {},
    "source": [
     "# First paradigm for dict use: A read-only database\n",
@@ -506,7 +506,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "a0f244c9",
+   "id": "8749e8f0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -516,7 +516,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "ebc90b18",
+   "id": "998d4c25",
    "metadata": {},
    "outputs": [
     {
@@ -537,7 +537,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "eaa05ff1",
+   "id": "c5bbbe38",
    "metadata": {},
    "outputs": [
     {
@@ -558,7 +558,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "64c2afaf",
+   "id": "4831b135",
    "metadata": {},
    "source": [
     "# Exercise: Restuarant\n",
@@ -583,7 +583,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "982dbb7b",
+   "id": "bf3b62db",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -596,7 +596,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "8bc8d11d",
+   "id": "1435dfca",
    "metadata": {},
    "outputs": [
     {
@@ -617,7 +617,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "e24b6602",
+   "id": "fd51b49a",
    "metadata": {},
    "outputs": [
     {
@@ -638,7 +638,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "153226f7",
+   "id": "0c325879",
    "metadata": {},
    "outputs": [
     {
@@ -660,7 +660,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "ca2bb4f6",
+   "id": "2b049e10",
    "metadata": {},
    "outputs": [
     {
@@ -710,7 +710,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "473f0a8b",
+   "id": "95871573",
    "metadata": {},
    "outputs": [
     {
@@ -732,7 +732,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "755cd343",
+   "id": "6e07d1b2",
    "metadata": {},
    "outputs": [
     {
@@ -752,14 +752,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ee7d6cbe",
+   "id": "fd0b9625",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "5f67b3c9",
+   "id": "214b6ae8",
    "metadata": {},
    "source": [
     "\n",
@@ -784,7 +784,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "bac3141f",
+   "id": "38fc617c",
    "metadata": {},
    "outputs": [
     {
@@ -812,7 +812,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "1e2e574f",
+   "id": "cd9bb3a6",
    "metadata": {},
    "outputs": [
     {
@@ -838,7 +838,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "a7cf10d2",
+   "id": "165f4903",
    "metadata": {},
    "outputs": [
     {
@@ -862,7 +862,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "a27f1274",
+   "id": "c9665445",
    "metadata": {},
    "outputs": [
     {
@@ -882,7 +882,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e31af62b",
+   "id": "508f0566",
    "metadata": {},
    "source": [
     "# Dicts are always key -> value\n",
@@ -897,7 +897,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "e9d51d89",
+   "id": "764934ec",
    "metadata": {},
    "outputs": [
     {
@@ -917,7 +917,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0ff98976",
+   "id": "11b41b0e",
    "metadata": {},
    "source": [
     "# Next up\n",
@@ -928,7 +928,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "feef11cd",
+   "id": "aca6ce82",
    "metadata": {},
    "source": [
     "# Dicts for accumulation (paradigm 2)\n",
@@ -941,7 +941,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "5694cf4f",
+   "id": "9d9dab22",
    "metadata": {},
    "outputs": [
     {
@@ -971,7 +971,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bc4457c9",
+   "id": "7c7736bb",
    "metadata": {},
    "source": [
     "# Exercise: Vowels, digits, and others (dict edition)\n",
@@ -988,7 +988,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "0d79f73b",
+   "id": "2ef7858b",
    "metadata": {},
    "outputs": [
     {
@@ -1022,7 +1022,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "e4563aca",
+   "id": "d76957a2",
    "metadata": {},
    "outputs": [
     {
@@ -1043,7 +1043,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8a30f8f4",
+   "id": "e461c5b8",
    "metadata": {},
    "source": [
     "# Accumulating the unknown (paradigm 3)\n",
@@ -1058,7 +1058,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "2e069d36",
+   "id": "247468a1",
    "metadata": {},
    "outputs": [
     {
@@ -1095,7 +1095,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "53b3a9a9",
+   "id": "f77cd5d4",
    "metadata": {},
    "outputs": [
     {
@@ -1123,7 +1123,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "ac3ffb9e",
+   "id": "7631bac7",
    "metadata": {},
    "outputs": [
     {
@@ -1159,7 +1159,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "29c823c1",
+   "id": "728088b8",
    "metadata": {},
    "source": [
     "# Rainfall \n",
@@ -1195,7 +1195,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "e67d80b9",
+   "id": "7c07973c",
    "metadata": {},
    "outputs": [
     {
@@ -1238,7 +1238,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "85c8c519",
+   "id": "da4f7570",
    "metadata": {},
    "source": [
     "# Next up\n",
@@ -1250,7 +1250,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8b246698",
+   "id": "cee81a40",
    "metadata": {},
    "source": [
     "# Looping over dicts\n",
@@ -1267,7 +1267,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "6f904835",
+   "id": "91a1cb4d",
    "metadata": {},
    "outputs": [
     {
@@ -1290,7 +1290,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "815ec7b0",
+   "id": "80d84544",
    "metadata": {},
    "outputs": [
     {
@@ -1313,7 +1313,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "b8c887bb",
+   "id": "9a7de95e",
    "metadata": {},
    "outputs": [
     {
@@ -1336,7 +1336,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "5749220a",
+   "id": "909870eb",
    "metadata": {},
    "outputs": [
     {
@@ -1360,7 +1360,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "7ac3b90f",
+   "id": "26851160",
    "metadata": {},
    "outputs": [
     {
@@ -1383,7 +1383,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "a60e48b2",
+   "id": "4d5c8bbf",
    "metadata": {},
    "outputs": [
     {
@@ -1406,7 +1406,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "03894cc7",
+   "id": "b924e4c4",
    "metadata": {},
    "outputs": [
     {
@@ -1427,7 +1427,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "78c427e2",
+   "id": "249773fa",
    "metadata": {},
    "outputs": [
     {
@@ -1450,7 +1450,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "9b37f2bb",
+   "id": "0ff50232",
    "metadata": {},
    "outputs": [
     {
@@ -1473,7 +1473,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "ed2fa729",
+   "id": "6aa9da55",
    "metadata": {},
    "outputs": [
     {
@@ -1495,7 +1495,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "7378584d",
+   "id": "9cc06a6c",
    "metadata": {},
    "outputs": [
     {
@@ -1516,7 +1516,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f8a52def",
+   "id": "9d86d609",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1528,7 +1528,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3cc4fffd",
+   "id": "9eb7ed42",
    "metadata": {},
    "source": [
     "# Exercise: Age statistics\n",
@@ -1540,7 +1540,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "8ef09359",
+   "id": "441c8311",
    "metadata": {},
    "outputs": [
     {
@@ -1571,7 +1571,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "408f70f9",
+   "id": "638df6ab",
    "metadata": {},
    "outputs": [
     {
@@ -1598,7 +1598,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "62dc37ac",
+   "id": "994476d0",
    "metadata": {},
    "outputs": [
     {
@@ -1620,7 +1620,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "459d5264",
+   "id": "2f56ea44",
    "metadata": {},
    "source": [
     "# How do dictionaries work?\n",
@@ -1649,11 +1649,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4a851af0",
+   "id": "d99d72c7",
    "metadata": {},
    "source": [
     "# Files\n",
-    "\n"
+    "\n",
+    "We, as computer users, normally think of files as Word documents, Excel spreadsheets, or PDF documents. In the computer world, a file is just any collection of data stored in a way that we can then retrieve it later on and continue with our work as if we had just entered that data. We're going to concentrate on text files in this class, in part because they're the easiest to deal with, and in part because they're quite common -- logfiles and the like are all text files.\n",
+    "\n",
+    "If I want to read a file from the filesystem, I can't! I can't do it directly, without help. I need the assistance of the operating system.  "
    ]
   }
  ],
